# sollanaframework

./: .tmp_debug_code.py  .tmp_multi_eval.py  README.md  TEST_RESULTS.md  licence.md  pyproject.toml  requirements.txt  test
Behavioral Consciousness/: bce_core_module.py  bce_self_reflex.py  bce_unified_singlefile.py  character_dynamics.py  cici_kus_topology.py  cicikus_core.py  context_tracking.py  decay_and_norms.py  experience_transformer.py  hipofiz_guard.py  integrated_mini_loop.py  kilavuz_kivilcim.py  salinim_core.py  salinim_module.py  salinum_flavor_opt.py  sanal_hipofiz.py  sanal_oksipital.py  selection.py  smoke_bce_new.py  soul_phi_cube_module.py  system_integrator.py  tmp_integ_test.py
backends/: __init__.py  config.py  hf_io.py  registry.py  trainer_bridge.py
data/: huggingface_turkish_english_sample.txt  test.bce  val_small.txt
decay/: bce_pytorch.py  decay_core.py
dna/: behavior_anomaly.py  behavior_mutation.py  behavioral_dna.py  example_anomaly_run.py  example_dna_run.py  example_temporal_run.py  temporal_memory.py
docs/: guide.md
ego/: anomalies_patterns.py  bce_selection.py  bce_store.py  behavior_clustering.py  behavior_path_mapper.py  behavior_volume.py  behavioral_network_example.py  behavioral_neuron_vectorized.py  behavioral_processes.py  character_map.py  cluster_emotions.py  consciousness_layers.py  context_propagation.py  controlled_schiz.py  data_quality.py  decay_and_path.py  dynamic_behavior.py  ego_layer.py  emotion_cluster.py  evo_utils.py  evolution_policy.py  example_physical_run.py  example_pipeline.py  feedback_manager.py  (+23 more)
(+107 files in other folders)
